# gtest_example

./: CMakeLists.txt  hello_test.cc  math_operations.c  math_operations.h  math_test.cpp  readme.txt
